--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "precompile": "rimraf app/**/*.js test/**/*.js",
     "compile": "tsc",
     "pretest": "rimraf app/**/*.js test/**/*.js",
-    "test:jest": "jest",
-    "test:jest:watch": "jest --watchAll",
-    "test:mocha": "nyc mocha",
-    "test:vitest": "vitest --coverage"
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage"
   },
   "license": "MIT",
   "private": true,
